<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ui.register.register">

    <EditText
        android:id="@+id/name"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="100dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="110dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="100dp"
        android:ems="10"
        android:hint="@string/enter_mail_id"
        android:inputType="textEmailAddress"
        android:autofillHints=""
        android:layout_marginStart="110dp"
        android:layout_marginEnd="100dp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="100dp"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:autofillHints=""
        android:layout_marginStart="110dp"
        android:layout_marginEnd="100dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="240dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="100dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:autofillHints=""
        android:layout_marginStart="110dp"
        android:layout_marginEnd="100dp" />

    <EditText
        android:id="@+id/reenter"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="100dp"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:autofillHints=""
        android:layout_marginStart="110dp"
        android:layout_marginEnd="100dp" />

    <Button
        android:id="@+id/register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="410dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="100dp"
        android:background="#51636C"
        android:text="@string/register"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="100dp" />

</FrameLayout>