<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/insurance1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.insurance.insurance">

    <EditText
        android:id="@+id/phone1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="100dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:autofillHints=""
        android:layout_marginStart="110dp"
        android:layout_marginEnd="100dp" />

    <EditText
        android:id="@+id/crop"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:entries="@array/string"
        android:visibility="visible"
        android:layout_marginBottom="200dp"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="100dp"
        android:hint="@string/crop"
        android:inputType="text"
        android:autofillHints=""
        android:layout_marginStart="110dp"
        android:layout_marginEnd="100dp" />


    <EditText
        android:id="@+id/acre"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:entries="@array/string"
        android:visibility="visible"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="100dp"
        android:hint="@string/acre"
        android:inputType="text"
        android:autofillHints=""
        android:layout_marginStart="110dp"
        android:layout_marginEnd="100dp" />

    <Button
        android:id="@+id/submit2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="340dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="100dp"
        android:text="@string/apply"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="100dp" />
</FrameLayout>